# jpegtranweb

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
backend/: app.py
src/: App.svelte  app.css
src/lib/: client.ts  cropBox.ts
